# nxd-trust-list

./: .gitignore  CNAME  NXD-TL.xml  README.md  nxd-trust-list-onboarding.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml  validate.yml
TrstSvc/Svctype/: PID.md
onboarding/: README.md  example.json.template
onboarding/schema/: participant.schema.json
scripts/: README.md  generate_lists.py
trust-lists/: NXD-TL-EAA.xml  NXD-TL-PID.xml  NXD-TL-PubEAA.xml  NXD-TL-QEAA.xml  NXD-TL-Registrars.xml  NXD-TL-WRPAC.xml  NXD-TL-WRPRC.xml  NXD-TL-WalletProviders.xml  nxd-eaa-providers-lote.json  nxd-pid-providers-lote.json  nxd-pub-eaa-providers-lote.json  nxd-registrars-and-registers-lote.json  nxd-wallet-providers-lote.json  nxd-wrpac-providers-lote.json  nxd-wrprc-providers-lote.json
